--- a/homepage.html
+++ b/homepage.html
@@ -8,8 +8,8 @@
 
     <body>
     <header>
-    	Bienvenue chez le GrandPyBot, Le Papy-Robot
-    	<img src ="nature.jpg" height="300" width="1200" alt="photo de nice" />
+        Bienvenue chez le GrandPyBot, Le Papy-Robot
+    	<img src ="nature.jpg" height="150" width="1200" alt="header pic" />
     </header>
     </body>
 </html>
