--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
 
     <body>
     <header>
-        Bienvenue chez le GrandPyBot, Le Papy-Robot
+        <div class="element" >Bienvenue chez le GrandPyBot, Le Papy-Robot </div>
     	<img src ="nature.jpg" height="150" width="1200" alt="header pic" />
     </header>
     </body>
