--- a/homepage.html
+++ b/homepage.html
@@ -9,6 +9,7 @@
     <body>
     <header>
         <div class="element" >Bienvenue chez le GrandPyBot, Le Papy-Robot </div>
+        <img src="robot.png" height="100" width="400" ="300" alt=logo />
     </header>
     </body>
 </html>
